Home header on scroll resize

--- a/public/assets/m/css/style.css
+++ b/public/assets/m/css/style.css
@@ -1,3 +1,30 @@
+/*header*/
+#header_nav {
+    width:100%;
+    background-color:#F8F8FF;
+    position:fixed;
+    top:0;
+    left:0;
+   -webkit-transition:0.5s linear all;
+   -moz-transition:0.5s linear all;
+   -o-transition:0.5s linear all;
+   transition:0.5s linear all;
+   z-index:10000;
+}
+
+.big {
+  padding-top:60px;
+  font-color:white;
+    height:110px;
+    font-size: 30px;
+}
+
+.small {
+   padding-top:60px;
+   font-color:white;
+   height:90px;
+    font-size: 20px;
+}
 a,
 a:focus,
 a:hover {
